# Autonomous-fire-car

./: README.md  readme.md
Application.java/: Application.java
Extinguisher.py/: Extinguisher.py
Fire_detect.ino/: fire_detect.ino
Fire_detector.py/: fire_detector.py
Node32sROS.ino/: Node32sROS.ino
fireapp/: fireapp.ino
main/: swcon_main.py
swcon_bringup/: CMakeLists.txt  package.xml
swcon_bringup/launch/: nodemcu32.launch  swcon_bringup.launch
swcon_navigation/: CMakeLists.txt  package.xml
swcon_navigation/launch/: swconNavi_rviz.launch  swcon_Navi.launch
swcon_navigation/maps/: home.pgm  home.yaml
swcon_slam/: CMakeLists.txt  package.xml
swcon_slam/launch/: swcon_cartographer.launch  swcon_cartographer_rviz.launch  view_rplidar.launch
swcon_teleop/: CMakeLists.txt  package.xml  setup.py
swcon_teleop/launch/: swcon_teleop_key.launch
